--- a/Imitacion_de_Dic_Coffe-main/index.html
+++ b/Imitacion_de_Dic_Coffe-main/index.html
@@ -85,28 +85,36 @@
                             <h4>Blended Coffee</h4>
                             <p>¥400</p>
                         </div>
-                        <img src="images/sample_cafe1.jpg" alt="Blended Coffee" class="menu_item_image">
+                        <div class="coffee_image_wrapper">
+                            <img src="images/sample_cafe1.jpg" alt="Blended Coffee" class="coffee_menu_image">
+                        </div>
                     </li>
                     <li class="menu_item">
                         <div class="menu_item_content">
                             <h4>Art Latte</h4>
                             <p>¥500</p>
                         </div>
-                        <img src="images/sample_cafe2.jpg" alt="Art Latte" class="menu_item_image">
+                        <div class="coffee_image_wrapper">
+                            <img src="images/sample_cafe2.jpg" alt="Art Latte" class="coffee_menu_image">
+                        </div>
                     </li>
                     <li class="menu_item">
                         <div class="menu_item_content">
                             <h4>Cafe Latte</h4>
                             <p>¥450</p>
                         </div>
-                        <img src="images/sample_cafe3.jpg" alt="Cafe Latte" class="menu_item_image">
+                        <div class="coffee_image_wrapper">
+                            <img src="images/sample_cafe3.jpg" alt="Cafe Latte" class="coffee_menu_image">
+                        </div>
                     </li>
                     <li class="menu_item">
                         <div class="menu_item_content">
                             <h4>Iced Coffee</h4>
                             <p>¥350</p>
                         </div>
-                        <img src="images/sample_cafe4.jpg" alt="Iced Coffee" class="menu_item_image">
+                        <div class="coffee_image_wrapper">
+                            <img src="images/sample_cafe4.jpg" alt="Iced Coffee" class="coffee_menu_image">
+                        </div>
                     </li>
                 </ul>
             </section>
