--- a/Imitacion_de_Dic_Coffe-main/index.html
+++ b/Imitacion_de_Dic_Coffe-main/index.html
@@ -39,8 +39,7 @@
                         Coffee from DIC Coffee uses coffee beans from Rwanda <strong>'DIC Beans'</strong>.<br>
                         We purchase directly from contracted coffee farmers.
                         <br>It is a cup with balanced acidity and richness, with a fruity sweetness. 
-                        <Br>Enjoy a cup of our specialty.
-                        <br> Enjoy it.
+                        <br>Enjoy a cup of our specialty.
                         <br>
                         <small>*The cafe is contracted and operated by Daibic Ltd. with the farm.</small>
                     </p>
@@ -48,7 +47,7 @@
                 <img src="images/sample_concept.jpg" alt="Concept of DIC Coffee" class="concept_image">
             </div>
         </article>
-        <article class="section_inner menu_section" id="menu">
+        <article class="section_inner menu_section article_menu_image" id="menu">
             <div class="section_title">
                 <h2>MENU</h2>
             </div>
@@ -56,7 +55,7 @@
                 <div class="center">
                     <h3 class="menu_title">Recommended Menu</h3>
                 </div>
-                <ul class="menu_list menu_list_recommended">
+                <ul class="menu_list recommended_menu_content">
                     <li class="menu_item">
                         <div class="menu_item_content">
                             <h4>Blueberry Pancakes</h4>
@@ -79,8 +78,8 @@
                 <div class="center">
                     <h3 class="menu_title">Coffee Menu</h3>
                 </div>
-                <ul class="menu_list menu_list_coffee">
-                    <li class="menu_item">
+                <ul class="menu_list coffe_menu_content">
+                    <li class="menu_item coffe_type_content">
                         <div class="menu_item_content">
                             <h4>Blended Coffee</h4>
                             <p>¥400</p>
@@ -89,7 +88,7 @@
                             <img src="images/sample_cafe1.jpg" alt="Blended Coffee" class="coffee_menu_image">
                         </div>
                     </li>
-                    <li class="menu_item">
+                    <li class="menu_item coffe_type_content">
                         <div class="menu_item_content">
                             <h4>Art Latte</h4>
                             <p>¥500</p>
@@ -98,7 +97,7 @@
                             <img src="images/sample_cafe2.jpg" alt="Art Latte" class="coffee_menu_image">
                         </div>
                     </li>
-                    <li class="menu_item">
+                    <li class="menu_item coffe_type_content">
                         <div class="menu_item_content">
                             <h4>Cafe Latte</h4>
                             <p>¥450</p>
@@ -107,7 +106,7 @@
                             <img src="images/sample_cafe3.jpg" alt="Cafe Latte" class="coffee_menu_image">
                         </div>
                     </li>
-                    <li class="menu_item">
+                    <li class="menu_item coffe_type_content">
                         <div class="menu_item_content">
                             <h4>Iced Coffee</h4>
                             <p>¥350</p>
@@ -125,11 +124,11 @@
                 <p>Store Information</p>
             </div>
             <div class="access_info">
-                <dl>
+                <dl class="content_dl">
                     <dt>Opening Hours</dt>
                     <dd>10:00 - 19:00<br>Closed on Thursdays</dd>
                 </dl>
-                <dl>
+                <dl class="content_dl">
                     <dt>Address</dt>
                     <dd>
                         Oba Building A, 28-4, Maruyama-cho, Shibuya-ku, Tokyo 150-0044, Japan<br>
@@ -141,7 +140,7 @@
         </article>
     </section>
 
-    <footer class="footer">
+    <footer class="section_footer">
         <nav>
             <ul class="footer_nav">
                 <li><a href="index.html" class="footer_nav_item">Home</a></li>
