--- a/Imitacion_de_Dic_Coffe-main/index.html
+++ b/Imitacion_de_Dic_Coffe-main/index.html
@@ -47,7 +47,7 @@
                 <img src="images/sample_concept.jpg" alt="Concept of DIC Coffee" class="concept_image">
             </div>
         </article>
-        <article class="section_inner menu_section article_menu_image" id="menu">
+        <article class="section_inner menu_section article_menu_image" id="menu"> <!-- Clase 'article_menu_image' añadida -->
             <div class="section_title">
                 <h2>MENU</h2>
             </div>
